--- a/public/index.html
+++ b/public/index.html
@@ -48,15 +48,32 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://mo.js.org/" />
 
+    <!-- Structured Data for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Mostage",
+      "url": "https://mo.js.org/",
+      "logo": "https://mo.js.org/images/logo.svg",
+      "description": "Generate web slides by Markdown. Modern presentation framework with HTML support and multi-format export capabilities.",
+      "sameAs": [
+        "https://github.com/mirmousaviii/mostage",
+        "https://www.npmjs.com/package/mostage"
+      ]
+    }
+    </script>
+
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="./icons/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="./icons/favicon-96x96.png"
+      href="/icons/favicon-96x96.png"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
 
     <link rel="stylesheet" href="./css/main.css" />
   </head>
