feat: add link of demo to website

--- a/public/index.html
+++ b/public/index.html
@@ -171,9 +171,9 @@
           <p class="hero-description">Available as a <strong>Core Library</strong> and <strong>CLI</strong></strong></p>
           <div class="hero-buttons">
             <a href="#getting-started" class="btn btn-secondary">Get Started</a>
-            <a href="#demo" class="btn btn-primary">View Demo</a>
+            <a href="https://github.com/mirmousaviii/mostage" class="btn btn-primary" target="_blank" rel="noopener noreferrer">GitHub</a>
           </div>
-          
+
           <!-- Scroll Hint -->
           <div class="scroll-hint">
             <div class="scroll-hint-arrow">
@@ -667,6 +667,12 @@ mo.start();
             </div>
           </div>
         </div>
+        <div class="getting-started-note animate-on-scroll delay-4">
+          <p>
+            The <strong><a href="https://mo.js.org/demo/" target="_blank" rel="noopener noreferrer">live demo</a></strong> is the result of running <code>npx mostage example</code>
+          </p>
+        </div>
+
       </div>
     </section>
 
