docs: update links in website

--- a/public/index.html
+++ b/public/index.html
@@ -121,13 +121,6 @@
           <a href="#demo" class="nav-link">Demo</a>
           <a href="#cli" class="nav-link">CLI</a>
           <a href="#editor" class="nav-link">Editor</a>
-          <a
-            href="https://github.com/mirmousaviii/mostage"
-            class="nav-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            >GitHub</a
-          >
         </div>
 
         <!-- Mobile Menu Toggle -->
@@ -151,13 +144,6 @@
           <a href="#demo" class="mobile-nav-link">Demo</a>
           <a href="#cli" class="mobile-nav-link">CLI</a>
           <a href="#editor" class="mobile-nav-link">Editor</a>
-          <a
-            href="https://github.com/mirmousaviii/mostage"
-            class="mobile-nav-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            >GitHub</a
-          >
         </div>
       </div>
     </nav>
@@ -726,10 +712,10 @@ mo.start();
               >NPM</a
             >
             <a
-              href="https://github.com/mirmousaviii/mostage/tree/main/docs"
+              href="https://mirmousaviii.github.io/mostage-editor/"
               target="_blank"
               rel="noopener noreferrer"
-              >Docs</a
+              >Editor</a
             >
             <a
               href="https://github.com/mirmousaviii/mostage/issues"
